fix(TimeField): align label spacing and disabled with DatePicker

--- a/packages/date-picker/src/TimeField/TimeField.module.scss
+++ b/packages/date-picker/src/TimeField/TimeField.module.scss
@@ -33,6 +33,7 @@ $story-className--timefield-focus: ":global(.story__timefield-focus)";
   line-height: $typography-paragraph-body-line-height;
   padding: 0 $spacing-sm;
   height: $input-height;
+  margin-top: $spacing-6;
   width: 100%;
   box-sizing: border-box;
 
